<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/field_map_red"
    tools:context=".mainactivity_fragments.Map">


    <ToggleButton
        android:id="@+id/cboBehindLineRed"
        android:layout_width="272dp"
        android:layout_height="51dp"
        android:background="@drawable/togglebutton_transfill_red"
        android:fontFamily="@font/lato"
        android:textColor="#222222"
        android:textOff=""
        android:textOn="@string/bl"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.734" />

    <ToggleButton
        android:id="@+id/cboBehindShieldRed"
        android:layout_width="258dp"
        android:layout_height="46dp"
        android:background="@drawable/togglebutton_transfill_red"
        android:fontFamily="@font/lato"
        android:textColor="#222222"
        android:textOff=""
        android:textOn="@string/bs"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".3" />

    <ToggleButton
        android:id="@+id/cboFrontLineRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/togglebutton_transfill_red"
        android:fontFamily="@font/lato"
        android:textColor="#222222"
        android:textOff=""
        android:textOn="@string/fl"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />

    <ToggleButton
        android:id="@+id/cboFrontShieldRed"
        android:layout_width="208dp"
        android:layout_height="41dp"
        android:background="@drawable/togglebutton_transfill_red"
        android:fontFamily="@font/lato"
        android:textColor="#222222"
        android:textOff=""
        android:textOn="@string/fs"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <ToggleButton
        android:id="@+id/cboPortSafeZoneRed"
        android:layout_width="181dp"
        android:layout_height="50dp"
        android:background="@drawable/togglebutton_transfill_red"
        android:fontFamily="@font/lato"
        android:textColor="#222222"
        android:textOff=""
        android:textOn="@string/sz"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982" />

    <ToggleButton
        android:id="@+id/cboFrontControlPanelRed"
        android:layout_width="55dp"
        android:layout_height="100dp"
        android:background="@drawable/togglebutton_transfill_red"
        android:fontFamily="@font/lato"
        android:textColor="#222222"
        android:textOff=""
        android:textOn="@string/fw"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.568" />

    <ToggleButton
        android:id="@+id/cboBehindControlPanelRed"
        android:layout_width="73dp"
        android:layout_height="45dp"
        android:background="@drawable/togglebutton_transfill_red"
        android:fontFamily="@font/lato"
        android:textColor="#222222"
        android:textOff=""
        android:textOn="@string/bw"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />


</androidx.constraintlayout.widget.ConstraintLayout>