<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/endgame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:visibility="visible"
    tools:context="org.stormroboticsnj.stormuserradar2020.mainactivity_fragments.Endgame"
    tools:visibility="visible">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato"
        android:text="@string/bottom_port"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#222222"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnEMoreLVL1"/>

    <TextView
        android:id="@+id/txtEScoredLVL1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="#222222"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnELessLVL1"
        app:layout_constraintEnd_toStartOf="@+id/btnEMoreLVL1"
        app:layout_constraintStart_toEndOf="@+id/btnELessLVL1"
        app:layout_constraintTop_toTopOf="@+id/btnELessLVL1" />

    <Button
        android:id="@+id/btnEMoreLVL1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_normalfill_orange"
        android:fontFamily="@font/lato"
        android:text="@string/plus"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="@+id/guideline9"
        app:layout_constraintStart_toEndOf="@+id/txtEScoredLVL1"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/btnELessLVL1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_normalfill_red"
        android:fontFamily="@font/lato"
        android:text="@string/minus"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnEMoreLVL1"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@+id/txtEScoredLVL1"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/btnEMoreLVL1" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato"
        android:text="@string/outer_port"
        android:textAlignment="center"
        android:textColor="#222222"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEMoreLVL1"
        app:layout_constraintBottom_toTopOf="@+id/btnEMoreLVL2"/>

    <TextView
        android:id="@+id/txtEScoredLVL2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="#222222"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnELessLVL2"
        app:layout_constraintEnd_toStartOf="@+id/btnEMoreLVL2"
        app:layout_constraintStart_toEndOf="@+id/btnELessLVL2"
        app:layout_constraintTop_toTopOf="@+id/btnELessLVL2" />

    <Button
        android:id="@+id/btnEMoreLVL2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_normalfill_orange"
        android:fontFamily="@font/lato"
        android:text="@string/plus"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toEndOf="@+id/txtEScoredLVL2"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/btnELessLVL2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_normalfill_red"
        android:fontFamily="@font/lato"
        android:text="@string/minus"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnEMoreLVL2"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@+id/txtEScoredLVL2"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/btnEMoreLVL2" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato"
        android:text="@string/inner_port"
        android:textAlignment="center"
        android:textColor="#222222"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEMoreLVL2"
        app:layout_constraintBottom_toTopOf="@+id/btnEMoreLVL3"/>


    <TextView
        android:id="@+id/txtEScoredLVL3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="0"
        android:textAlignment="center"
        android:textColor="#222222"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnELessLVL3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnELessLVL3" />

    <Button
        android:id="@+id/btnEMoreLVL3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_normalfill_orange"
        android:fontFamily="@font/lato"
        android:text="@string/plus"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintHorizontal_bias=".8"
        app:layout_constraintStart_toEndOf="@+id/txtEScoredLVL3"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <Button
        android:id="@+id/btnELessLVL3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_normalfill_red"
        android:fontFamily="@font/lato"
        android:text="@string/minus"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnEMoreLVL3"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@+id/txtEScoredLVL3"
        app:layout_constraintHorizontal_bias=".2"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/btnEMoreLVL3" />

    <view
        android:id="@+id/radioGroupHang"
        class="org.stormroboticsnj.stormuserradar2020.mainactivity_fragments.MultiLineRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7">

        <RadioButton
            android:id="@+id/rdoNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="None" />


        <RadioButton
            android:id="@+id/rdoPark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="Park" />

        <RadioButton
            android:id="@+id/rdoHang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="Hang" />


        <RadioButton
            android:id="@+id/rdoLevelHang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="Level Hang" />
    </view>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_grayfill_green"
        android:fontFamily="@font/lato"
        android:text="@string/submit"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#222222"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="3"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupHang" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />
</androidx.constraintlayout.widget.ConstraintLayout>